force-app/main/default/objects/Plan__c/Plan__c.object-meta.xml
<CustomObject>
    <description>Stores scheduled tasks that the AI agent will execute at specified times. Each plan contains instructions, context, and a cron schedule for headless agent execution.</description>
    <label>Plan</label>
    <nameField>
        <displayFormat>PLN-{0000}</displayFormat>
        <label>Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>