force-app/main/default/objects/Plan__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>JSON-serialized context variables passed to the headless agent at execution time. Contains record IDs, parameters, or other data needed for the plan.</description>
    <inlineHelpText>JSON key-value pairs e.g. {&quot;AccountId&quot;:&quot;001xx&quot;,&quot;Priority&quot;:&quot;High&quot;}</inlineHelpText>
    <label>Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>