force-app/main/default/objects/Plan__c/fields/CronExpression__c.field-meta.xml
<CustomField>
    <fullName>CronExpression__c</fullName>
    <description>Salesforce cron expression that determines when this plan executes. Format: seconds minutes hours dayOfMonth month dayOfWeek optionalYear.</description>
    <inlineHelpText>Cron schedule e.g. 0 0 9 ? * MON-FRI (weekdays at 9am)</inlineHelpText>
    <label>Cron Expression</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>