force-app/main/default/objects/Plan__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <description>The prompt instructions the headless agent will execute when this plan runs.</description>
    <inlineHelpText>What should the agent do? e.g. &quot;Check for unassigned high-priority cases and notify me&quot;</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>