force-app/main/default/objects/Plan__c/fields/IsRecurring__c.field-meta.xml
<CustomField>
    <fullName>IsRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the plan re-schedules itself after each execution. When unchecked, the plan runs once and is marked Completed.</description>
    <inlineHelpText>Check for repeating schedules (daily, weekly). Leave unchecked for one-time execution.</inlineHelpText>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>