force-app/main/default/objects/Plan__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>The CronTrigger ID from System.schedule(). Links the Plan to its scheduled Apex job for lookup at execution time.</description>
    <externalId>true</externalId>
    <label>Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>