force-app/main/default/objects/Plan__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <description>The prompt the headless agent will execute when this plan runs.</description>
    <label>Prompt</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>