force-app/main/default/objects/Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prompt__c</columns>
    <columns>Context__c</columns>
    <columns>JobId__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>